Agregar estructura HTML y estilos CSS para la barra de navegación

--- a/home.html
+++ b/home.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="home.css">
+    <title>Re-style</title>
+</head>
+
+<body>
+    <section class="navbar">
+        <div class="logo">
+            <a href="#">Re-style</a>
+        </div>
+        <div class="nav-links">
+            <a href="#">Wome </a>
+            <a href="#">Men</a>
+            <a href="#">Kids</a>
+            <a href="#">Home</a>
+            <a href="#">Sale</a>
+
+        </div>
+        <div class="buttons">
+            <button>Search</button>
+            <button>Sign In</button>
+            <button>Carrito</button>
+        </div>
+    </section>
+</body>
+
+</html>
