--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             <a href="#">Re-style</a>
         </div>
         <div class="nav-links">
-            <a href="#">Wome </a>
+            <a href="#">Women</a>
             <a href="#">Men</a>
             <a href="#">Kids</a>
             <a href="#">Home</a>
