Agregar estilos y estructura para la sección de marcas, categorías y productos populares en home.html y home.css

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
+    <link rel="icon" href="/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=shopping_cart_checkout" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +18,7 @@
 <body>
     <section class="navbar">
         <div class="logo">
-            <a href="#">Re-style</a>
+            <img src="/img/logo.png" alt="Logo">
         </div>
         <div class="nav-links">
             <a href="#">Women</a>
@@ -73,8 +74,103 @@
         <button class="accordion-control prev" onclick="prevImage()">&#10094;</button>
         <button class="accordion-control next" onclick="nextImage()">&#10095;</button>
     </section>
-
     <script src="accordion.js"></script>
+    <section class="brands-container">
+        <h2>Brands We Love</h2>
+        <div class="brands-row">
+            <img src="/img/brand1.png" alt="Brand 1">
+            <img src="/img/brand2.png" alt="Brand 2">
+            <img src="/img/brand3.png" alt="Brand 3">
+            <img src="/img/brand4.png" alt="Brand 4">
+            <img src="/img/brand5.png" alt="Brand 5">
+            <img src="/img/brand6.png" alt="Brand 6">
+            <img src="/img/brand7.png" alt="Brand 7">
+            <img src="/img/brand8.png" alt="Brand 8">
+            <img src="/img/brand9.png" alt="Brand 9">
+            <img src="/img/brand10.png" alt="Brand 10">
+        </div>
+    </section>
+    <section class="category">
+        <h2>Shop By Category</h2>
+        <section class="categories-row">
+            <div>
+                <a href="http://">
+                    <img src="/img/category1.png" alt="Category 1">
+                </a>
+                <h4>Women's Clothing</h4>
+            </div>
+            <div>
+                <a href="http://">
+                    <img src="/img/category2.png" alt="Category 2">
+                </a>
+                <h4>Men's Clothing</h4>
+            </div>
+            <div>
+                <a href="http://">
+                    <img src="/img/category3.png" alt="Category 3">
+                </a>
+                <h4>Women's Shoes</h4>
+            </div>
+            <div>
+                <a href="http://">
+                    <img src="/img/category4.png" alt="Category 4">
+                </a>
+                <h4>Men's Shoes</h4>
+            </div>
+            <div>
+                <a href="http://">
+                    <img src="/img/category5.png" alt="Category 5">
+                </a>
+                <h4>Handbags</h4>
+            </div>
+            <div>
+                <a href="http://">
+                    <img src="/img/category6.png" alt="Category 6">
+                </a>
+                <h4>Accessories</h4>
+            </div>
+        </section>
+    </section>
+    <section class="popular-products">
+        <h2>Popular Products</h2>
+        <div class="products-row">
+            <div>
+                <a href="#">
+                    <img src="/img/product1.png" alt="Product 1">
+                </a>
+                <h3>Women's High Rise Skinny Jeans</h3>
+                <p>$120</p>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="/img/product2.png" alt="Product 2">
+                </a>
+                <h3>Men's Logo Hoodie</h3>
+                <p>$150</p>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="/img/product3.png" alt="Product 3">
+                </a>
+                <h3>Women's Running Shoes</h3>
+                <p>$80</p>
+            </div>
+            <div>
+                <a href="#">
+                    <img src="/img/product4.png" alt="Product 4">
+                </a>
+                <h3>Men's Graphic Tee</h3>
+                <p>$100</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="social-media">
+        </div>
+        <p>2025 Re-style. All rights reserved.</p>
+        <p>Privacy Policy | Terms of Service</p>
+        <p>Made with by Re-style Team</p>
+    </footer>
 </body>
 
 </html>
